added initial API URL Links to JS

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <form id="search-form">
             <label for="city-input">City:</label>
             <input type="text" id="city-input" placeholder="City name">
-            <button type="submit">Search</button>
+            <button id="search-button" type="submit">Search</button>
         </form>
         <div id="recent-searches">
             <ul id="recent-search-container">
