--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     </header>
     <section id="search-container">
         <form id="search-form">
-            <label for="city-input">City:</label>
-            <input type="text" id="city-input" placeholder="City name">
+            <label for="search-input">City:</label>
+            <input type="text" id="search-input" placeholder="City name">
             <button id="search-button" type="submit">Search</button>
         </form>
         <div id="recent-searches">
@@ -21,6 +21,7 @@
 
             </ul>
         </div>
+    </section>
     <section id="current-city-container">
         <h2 id="current-city"></h2>
         <ul id="current-city-forecast">
@@ -32,7 +33,6 @@
         <div></div>
         <div></div>
         <div></div>
-    </section>
     </section>
     
     <script src="./Assets/js/script.js"></script>
