--- a/index.html
+++ b/index.html
@@ -1,40 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./Assets/css/style.css">
-    <title>Weather Forecaster</title>
-</head>
-<body>
-    <header id="header-container">
-        <h1>Weather Dashboard</h1>
-    </header>
-    <section id="search-container">
-        <form id="search-form">
-            <label for="search-input">City:</label>
-            <input type="text" id="search-input" placeholder="City name">
-            <button id="search-button" type="submit">Search</button>
-        </form>
-        <div id="recent-searches">
-            <ul id="recent-search-container">
-
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+            integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+            crossorigin="anonymous">
+        <link rel="stylesheet" href="./Assets/css/style.css">
+        <title>Weather Forecaster</title>
+    </head>
+    <body>
+        <header id="header-container">
+            <h1>Weather Dashboard</h1>
+        </header>
+        <section id="search-container">
+            <form class ="d-flex flex-column" id="search-form">
+                <label class="ml-4" id="city-label" for="search-input">Search For a City:</label>
+                <input type="text" id="search-input" placeholder="City name">
+                <button id="search-button" type="submit">Search</button>
+            </form>
+            <div id="recent-searches">
+                <ul class="list-group w-25 mt-5 ml-4" id="recent-search-container">
+                    <li class="list-group-item text-center">Cras justo odio</li>
+                    <li class="list-group-item text-center">Dapibus ac facilisis in</li>
+                    <li class="list-group-item text-center">Morbi leo risus</li>
+                    <li class="list-group-item text-center">Porta ac consectetur ac</li>
+                    <li class="list-group-item text-center">Vestibulum at eros</li>
+                </ul>
+            </div>
+        </section>
+        <section id="current-city-container">
+            <h2 id="current-city"></h2>
+            <ul id="current-city-forecast">
             </ul>
-        </div>
-    </section>
-    <section id="current-city-container">
-        <h2 id="current-city"></h2>
-        <ul id="current-city-forecast">
-        </ul>
-    </section>
-    <section id="5-day-container">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-    </section>
-    
-    <script src="./Assets/js/script.js"></script>
-</body>
+        </section>
+        <section id="5-day-container" class="d-flex flex-row justify-content-start align-self-start mr-5 text-white">
+            <div id="one-day-out-forecast" class="ml-4 card bg-secondary">Tomorrow</div>
+            <div id="two-days-out-forecast" class="ml-4 card bg-secondary">Two days</div>
+            <div id="three-days-out-forecast" class="ml-4 card bg-secondary">Three days</div>
+            <div id="four-days-out-forecast" class="ml-4 card bg-secondary">Four days</div>
+            <div id="five-days-out-forecast" class="ml-4 card bg-secondary">Five days</div>
+        </section>
+
+        <script src="./Assets/js/script.js"></script>
+    </body>
 </html>
