final adjustment to the current city API call and display

--- a/index.html
+++ b/index.html
@@ -26,26 +26,17 @@
                 <div id="recent-searches">
                     <ul class="list-group mt-5 ml-4"
                         id="recent-search-container">
-                        <li class="list-group-item text-center">Cras justo
-                            odio</li>
-                        <li class="list-group-item text-center">Dapibus ac
-                            facilisis in</li>
-                        <li class="list-group-item text-center">Morbi leo
-                            risus</li>
-                        <li class="list-group-item text-center">Porta ac
-                            consectetur ac</li>
-                        <li class="list-group-item text-center">Vestibulum at
-                            eros</li>
+                        <li class="list-group-item text-center"></li>
                     </ul>
                 </div>
             </section>
             <section class="d-flex flex-column ml-5" id="main-container">
                 <div id="current-city-container">
-                    <h2 id="current-city">Current City</h2>
+                    <h2 id="current-city"></h2>
                     <ul id="current-city-forecast">
                     </ul>
                 </div>
-                <section id="5-day-container"
+                <section id="five-day-container"
                     class="d-flex flex-row justify-content-start align-self-start mr-5 mt-5 text-white">
                     <!-- <h2 class="text-danger">5 Day Forecast:</h2> -->
                     <div id="one-day-out-forecast"
