added aditional fetch logic to pull and append five day forecast data

--- a/index.html
+++ b/index.html
@@ -36,19 +36,19 @@
                     <ul id="current-city-forecast">
                     </ul>
                 </div>
+                <h2 class="text-dark mt-5">5 Day Forecast:</h2>
                 <section id="five-day-container"
                     class="d-flex flex-row justify-content-start align-self-start mr-5 mt-5 text-white">
-                    <!-- <h2 class="text-danger">5 Day Forecast:</h2> -->
-                    <div id="one-day-out-forecast"
-                        class="ml-4 card bg-secondary">Tomorrow</div>
-                    <div id="two-days-out-forecast"
-                        class="ml-4 card bg-secondary">Two days</div>
-                    <div id="three-days-out-forecast"
-                        class="ml-4 card bg-secondary">Three days</div>
-                    <div id="four-days-out-forecast"
-                        class="ml-4 card bg-secondary">Four days</div>
-                    <div id="five-days-out-forecast"
-                        class="ml-4 card bg-secondary">Five days</div>
+                    <ul id="one-day-out-forecast"
+                        class="ml-4 card bg-secondary">Tomorrow</ul>
+                    <ul id="two-days-out-forecast"
+                        class="ml-4 card bg-secondary">Two days</ul>
+                    <ul id="three-days-out-forecast"
+                        class="ml-4 card bg-secondary">Three days</ul>
+                    <ul id="four-days-out-forecast"
+                        class="ml-4 card bg-secondary">Four days</ul>
+                    <ul id="five-days-out-forecast"
+                        class="ml-4 card bg-secondary">Five days</ul>
                 </section>
             </section>
         </main>
