--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
             href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
             integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
             crossorigin="anonymous">
+            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
         <link rel="stylesheet" href="./Assets/css/style.css">
         <title>Weather Forecaster</title>
     </head>
@@ -14,7 +15,7 @@
         <header id="header-container">
             <h1>Weather Dashboard</h1>
         </header>
-        <main class="d-flex flex-row">
+        <main class="d-flex flex-row mt-5">
             <section id="search-container">
                 <form class="d-flex flex-column" id="search-form">
                     <label class="ml-4" id="city-label"
@@ -40,15 +41,15 @@
                 <section id="five-day-container"
                     class="d-flex flex-row justify-content-start align-self-start mr-5 mt-5 text-white">
                     <ul id="one-day-out-forecast"
-                        class="ml-4 card bg-secondary">Tomorrow</ul>
+                        class="ml-4 card bg-dark">Tomorrow</ul>
                     <ul id="two-days-out-forecast"
-                        class="ml-4 card bg-secondary">Two days</ul>
+                        class="ml-4 card bg-dark">Two days</ul>
                     <ul id="three-days-out-forecast"
-                        class="ml-4 card bg-secondary">Three days</ul>
+                        class="ml-4 card bg-dark">Three days</ul>
                     <ul id="four-days-out-forecast"
-                        class="ml-4 card bg-secondary">Four days</ul>
+                        class="ml-4 card bg-dark">Four days</ul>
                     <ul id="five-days-out-forecast"
-                        class="ml-4 card bg-secondary">Five days</ul>
+                        class="ml-4 card bg-dark">Five days</ul>
                 </section>
             </section>
         </main>
