finalized the functionality and majority of styling

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
                     <button id="search-button" type="submit">Search</button>
                 </form>
                 <div id="recent-searches">
-                    <ul class="list-group mt-5 ml-4"
+                    <div class="list-group mt-5 ml-4"
                         id="recent-search-container">
                         <li class="list-group-item text-center"></li>
-                    </ul>
+                </div>
                 </div>
             </section>
             <section class="d-flex flex-column ml-5" id="main-container">
@@ -39,7 +39,7 @@
                 </div>
                 <h2 class="text-dark mt-5">5 Day Forecast:</h2>
                 <section id="five-day-container"
-                    class="d-flex flex-row justify-content-start align-self-start mr-5 mt-5 text-white">
+                    class="d-flex flex-row justify-content-start align-self-start flex-wrap w-100 mr-5 mt-5 text-white">
                     <ul id="one-day-out-forecast"
                         class="ml-4 card bg-dark">Tomorrow</ul>
                     <ul id="two-days-out-forecast"
