final edits were made to ensure the recent search history includes the right syntax with commas

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <label class="ml-4" id="city-label"
                         for="search-input">Search For a City:</label>
                     <input type="text" id="search-input"
-                        placeholder="City name">
+                        placeholder="(city, state, and country codes)">
                     <button id="search-button" type="submit">Search</button>
                 </form>
                 <div id="recent-searches">
